--- a/index.html
+++ b/index.html
@@ -183,6 +183,14 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message me</h3>
+            <form class="contact" action="">
+                <input type="name" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                <input class="btn-primary" type="submit" value="submit">
+                
+            </form>
+
         </div> 
 
     </footer>
